--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "Portfolio API",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "Eldar Tailov",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.5",
     "nodemailer": "^6.4.11"
+  },
+  "emgines": {
+    "node": ">=10.0.0"
   }
 }
